# bfbb-patch

./: .gitignore  Cargo.toml  _readelf.py  notes.md  readelf.py
prueba/: Cargo.toml
prueba/src/: main.rs
src/: lib.rs  main.rs
src/util/: bfbbobj.rs  mod.rs  read.rs  write.rs
tests/: integration_tests.rs
