[package]
name = "bfbb-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object = { version = "0.30.0", features = ["read_core", "std", "elf", "write_std"], default-features = false }
argh = "0.1.9"

[workspace]

members = [
    "prueba"
]